# project-template-no-docs

./: .gitignore  .pre-commit-config.yaml  DEV.md  LICENSE  README.md  pyproject.toml
.github/workflows/: code_quality.yml
data/: README.md
notebooks/: 01_exploration.ipynb
src/package_name/: __init__.py  models.py  utils.py
tests/: test_mlp_model.py
